Changed Home and About
Changed description of the app on the Home page and removed the About link.

--- a/Carb Counter/Pages/Index.razor
+++ b/Carb Counter/Pages/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Carb Counter</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Carb Counter</h1>
 
-Welcome to your new app.
+A simple carb counting app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
