--- a/Carb Counter/_Imports.razor
+++ b/Carb Counter/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Carb_Counter
 @using Carb_Counter.Shared
+@using CCDataManager.Library.Models
+@using Radzen
+@using Radzen.Blazor
