--- a/Carb Counter/wwwroot/css/site.css
+++ b/Carb Counter/wwwroot/css/site.css
@@ -9,7 +9,12 @@ h1:focus {
 }
 
 a, .btn-link {
-    color: #0071c1;
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: black;
 }
 
 .btn-primary {
