--- a/Carb Counter/wwwroot/css/site.css
+++ b/Carb Counter/wwwroot/css/site.css
@@ -8,7 +8,7 @@ h1:focus {
     outline: none;
 }
 
-a, .btn-link {
+a {
     color: black;
     text-decoration: none;
 }
@@ -17,13 +17,20 @@ a:hover {
     color: black;
 }
 
+button.nav-link.btn.btn-link
+{
+    color: black;
+    box-shadow: none;
+}
+
 .btn-primary {
     color: #fff;
     background-color: #1b6ec2;
     border-color: #1861ac;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+
+.form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
