Added Food Data Access Library
Installed Dapper to use for data access. Created
a helper class and a Food query repository.

--- a/Carb Counter/_Imports.razor
+++ b/Carb Counter/_Imports.razor
@@ -9,5 +9,7 @@
 @using Carb_Counter
 @using Carb_Counter.Shared
 @using CCDataManager.Library.Models
+@using CCDataManager.Library.DataAccess
 @using Radzen
 @using Radzen.Blazor
+@using System.Security.Claims
