Changed Site Description and Video Styling
Updated site description to something a little longer
and more interesting sounding. Made the embedded
video link responsive and expand to the full size
of the container. Also, moved the title and description
to the unauthorized view only.

--- a/Carb Counter/Pages/Index.razor
+++ b/Carb Counter/Pages/Index.razor
@@ -2,12 +2,6 @@
 
 <PageTitle>Carb Counter</PageTitle>
 
-<h1>Carb Counter</h1>
-
-A simple carb counting app.
-
-<br/>
-
 <AuthorizeView>
 
     <Authorized>
@@ -15,13 +9,21 @@ A simple carb counting app.
     </Authorized>
 
     <NotAuthorized>
+        <h1>Carb Counter</h1>    
+        
+        <p>Take a bite out of healthy living with Carb Counter - a simple nutrition management tool. Effortlessly track your daily intake and watch your progress soar with this user-friendly and lightweight interface. It's the cherry on top of your wellness journey!</p>
+        <p>Log in and get started now. Just do it!</p>
+        
+        <div class="youtube-vid">
+            <iframe              
+                src="https://www.youtube.com/embed/ZXsQAXx_ao0" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+            </iframe>
+        </div>
+
         <br />
-        <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/ZXsQAXx_ao0" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-        </iframe>
     </NotAuthorized>
 
 </AuthorizeView>
