--- a/Carb Counter/wwwroot/css/site.css
+++ b/Carb Counter/wwwroot/css/site.css
@@ -78,3 +78,20 @@ button.nav-link.btn.btn-link
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+.youtube-vid {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
