--- a/Carb Counter/Shared/MainLayout.razor
+++ b/Carb Counter/Shared/MainLayout.razor
@@ -9,11 +9,15 @@
 
     <main>
         <div class="top-row px-4 auth">
-            <LoginDisplay />
+            <ErrorBoundary>
+                <LoginDisplay />
+            </ErrorBoundary>
         </div>
 
         <article class="content px-4">
-            @Body
+            <ErrorBoundary>
+                @Body
+            </ErrorBoundary>
         </article>
     </main>
 </div>
